Network Monitor testing
Testing a html network monitor

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Backend Demo</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Response Demo</title>
 </head>
 <body>
   <h1>Backend Demo</h1>
@@ -24,7 +25,13 @@
 
   <p id="combinedmessage"></p>
 
+  <div id="network-monitor-container">
+    <button id="toggle-network-monitor">Toggle Network Monitor</button>
+    <div id="network-monitor"></div>
+  </div>
+
 
   <script src="script.js"></script>
+  <script src="networkMonitor.js"></script>
 </body>
 </html>
