--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Backend Demo</title>
+  <title>Response Demo</title>
 </head>
+
 <body>
-  <h1>Backend Demo</h1>
+  <h1>Response Demo</h1>
 
   <h2>Json response</h2>
 
@@ -27,4 +29,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
